moving demo code.

--- a/c++/cli/CMakeLists.txt
+++ b/c++/cli/CMakeLists.txt
@@ -1,134 +1,24 @@
+#    File:    CMakeLists.txt
+#    Author:  Marvin Smith
+#    Date:    5/20/2015
+#
+#    Purpose:  Constructs the CLI-CPP Project
+#
 
-#  Set the CMake Version
+#----------------------------------------#
+#-        Set the CMake Version         -#
+#----------------------------------------#
 cmake_minimum_required( VERSION 2.8 FATAL_ERROR )
 
-#   Set the Project Name
+
+#----------------------------------------#
+#-          Set the Project Name        -#
+#----------------------------------------#
 project(libcli-cpp)
 
-#   Configure C++11
-set( CMAKE_CXX_FLAGS "-std=c++11 -Wall" )
 
-
-#--------------------------------------#
-#-      Find Boost C++ Libraries      -#
-#--------------------------------------#
-find_package( Boost REQUIRED
-                COMPONENTS
-                    system
-                    filesystem
-                    regex
-)
-
-include_directories(${Boost_INCLUDE_DIRS})
-
-
-#--------------------------------------#
-#-       Find NCurses Libraries       -#
-#--------------------------------------#
-find_package( Curses REQUIRED )
-
-include_directories(${CURSES_INCLUDE_DIR})
-
-#   Define our sources
-set( CLI_SOURCES
-     src/cli/A_CLI_Command_Queue.cpp
-     src/cli/A_CLI_Configuration_File_Parser.cpp
-     src/cli/A_CLI_Connection_Handler_Base.cpp
-     src/cli/A_CLI_Connection_Handler_Base_Config.cpp
-     src/cli/A_CLI_Connection_Handler_Local.cpp
-     src/cli/A_CLI_Connection_Handler_Local_Config.cpp
-     src/cli/A_CLI_Connection_Handler_Socket.cpp
-     src/cli/A_CLI_Connection_Handler_Socket_Config.cpp
-     src/cli/A_CLI_Manager.cpp
-     src/cli/A_CLI_Manager_Configuration.cpp
-     src/cli/A_CLI_Manager_Factory.cpp
-     src/cli/A_Command_History_Entry.cpp
-     src/cli/A_Command_Response_Handler_Base.cpp
-     src/cli/A_Console_Render_Manager.cpp
-     src/cli/A_Console_Render_Manager_ASCII.cpp
-     src/cli/A_Console_Render_Manager_NCurses.cpp
-     src/cli/A_Console_Render_State.cpp
-     src/cli/CLIConnectionType.cpp
-     src/cli/cmd/A_CLI_Command.cpp
-     src/cli/cmd/A_CLI_Command_Argument.cpp
-     src/cli/cmd/A_CLI_Command_Parser.cpp
-     src/cli/cmd/A_CLI_Command_Parser_Factory.cpp
-     src/cli/cmd/A_CLI_Command_Result.cpp
-     src/cli/cmd/A_CLI_Parser_Command.cpp
-     src/cli/cmd/CLICommandArgumentType.cpp
-     src/cli/cmd/CLICommandParseStatus.cpp
-     src/thirdparty/ncurses/NCurses_Utilities.cpp
-     src/thirdparty/pugixml/src/pugixml.cpp
-     src/utils/String_Utilities.cpp
-)
-
-
-#   Define our headers
-set( CLI_HEADERS
-     src/cli/A_CLI_Command_Queue.hpp
-     src/cli/A_CLI_Configuration_File_Parser.hpp
-     src/cli/A_CLI_Connection_Handler_Base.hpp
-     src/cli/A_CLI_Connection_Handler_Base_Config.hpp
-     src/cli/A_CLI_Connection_Handler_Local.hpp
-     src/cli/A_CLI_Connection_Handler_Local_Config.hpp
-     src/cli/A_CLI_Connection_Handler_Socket.hpp
-     src/cli/A_CLI_Connection_Handler_Socket_Config.hpp
-     src/cli/A_CLI_Manager.hpp
-     src/cli/A_CLI_Manager_Configuration.hpp
-     src/cli/A_CLI_Manager_Factory.hpp
-     src/cli/A_Command_History_Entry.hpp
-     src/cli/A_Command_Response_Handler_Base.hpp
-     src/cli/A_Console_Render_Manager.hpp
-     src/cli/A_Console_Render_Manager_ASCII.hpp
-     src/cli/A_Console_Render_Manager_NCurses.hpp
-     src/cli/A_Console_Render_State.hpp
-     src/cli/CLIConnectionType.hpp
-     src/cli/cmd/A_CLI_Command.hpp
-     src/cli/cmd/A_CLI_Command_Argument.hpp
-     src/cli/cmd/A_CLI_Command_Parser.hpp
-     src/cli/cmd/A_CLI_Command_Parser_Factory.hpp
-     src/cli/cmd/A_CLI_Command_Result.hpp
-     src/cli/cmd/A_CLI_Parser_Command.hpp
-     src/cli/cmd/CLICommandArgumentType.cpp
-     src/cli/cmd/CLICommandArgumentType.hpp
-     src/cli/cmd/CLICommandParseStatus.hpp
-     src/thirdparty/ncurses/NCurses_Utilities.hpp
-     src/thirdparty/pugixml.hpp
-     src/thirdparty/pugixml/src/pugixml.hpp
-     src/thirdparty/pugixml/src/pugiconfig.hpp
-     src/utils/ANSI_Utilities.hpp
-     src/utils/String_Utilities.hpp
-)
-
-     
-#   Define our main files
-set( CLI_DEMO_MAIN
-     src/main.cpp
-     src/cli/A_Demo_Command_Response_Handler.hpp
-     src/cli/A_Demo_Command_Response_Handler.cpp
-)
-
-#   Create the Library
-add_library( cli_cpp
-             ${CLI_HEADERS}
-             ${CLI_SOURCES}
-)
-
-target_link_libraries( cli_cpp 
-                       ${Boost_LIBRARIES}
-                       ${CURSES_LIBRARIES} 
-                       pthread )
-
-
-#   Create the demo application
-add_executable( cli_cpp_demo
-                ${CLI_DEMO_MAIN}
-)
-
-
-#   Link
-target_link_libraries( cli_cpp_demo 
-                       cli_cpp
-)
-
+#------------------------------------#
+#-     Add the Source Directory     -#
+#------------------------------------#
+add_subdirectory( src )
 
