Updated the solver.

--- a/machine-learning/maximum-likelihood/voting-records/options.cfg
+++ b/machine-learning/maximum-likelihood/voting-records/options.cfg
@@ -1,12 +1,27 @@
 [general]
 
+#  Log Severity
+log_severity=INFO
+
 
 #  Ratio of data to use for training
-train_ratio=0.9
+#  Start : Starting value to use
+#  Step  : Amount to increment each iteration by until you hit 1
+#
+train_ratio_start=0.1
+train_ratio_step=0.05
 
 #  Masks to skip processing of certain votes.
-field_masks=1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+field_masks=1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1
 
 
 #  Skip Random Shuffle (Debug Only)
-skip_shuffle=True
+skip_shuffle=False
+
+
+#  Max Repetitions
+number_repetitions=50
+
+
+#  Min Sigma before we use a dummy value
+min_sigma=0.0001
