Adjustments to GA script.

--- a/machine-learning/genetic-algorithms/tsp/datasets/options.cfg
+++ b/machine-learning/genetic-algorithms/tsp/datasets/options.cfg
@@ -5,7 +5,7 @@
 #   Valid Options:
 #   * INFO
 #   * DEBUG
-log_level=DEBUG
+log_level=INFO
 
 
 #  Timing Info Output File
@@ -14,7 +14,7 @@ timing_info_pathname=timing_data.csv
 #  Skip Cities
 #
 #  Skips the last N values
-skip_cities=9
+skip_cities=2
 
 
 #  Skip the Genetic Algorithm
@@ -27,7 +27,7 @@ skip_gd=False
 skip_bf=False
 
 #  Skip HTML Generation
-skip_html=True
+skip_html=False
 
 [genetic_algorithm]
 
