Updating TSP notes and usage.  Downgrading  to python2.

--- a/machine-learning/genetic-algorithms/tsp/datasets/options.cfg
+++ b/machine-learning/genetic-algorithms/tsp/datasets/options.cfg
@@ -9,11 +9,17 @@ log_level=INFO
 
 
 #  Timing Info Output File
+#
+#  This will be what the plot tool needs
+#
 timing_info_pathname=timing_data.csv
+
 
 #  Skip Cities
 #
 #  Skips the last N values
+#  - Recommend 2 if you want to run without waiting eons.
+#
 skip_cities=2
 
 
@@ -29,27 +35,36 @@ skip_bf=False
 #  Skip HTML Generation
 skip_html=False
 
+
 [genetic_algorithm]
+
 
 #  Population Size
 population_size=1000
 
+
 #  Max Number of Iterations
 max_iterations=100000
+
 
 #  Mutation Rate
 mutation_rate=0.15
 
+
 #  Selection Rate
 selection_rate=0.5
+
 
 #  Preservation Rate
 preservation_rate=0.01
 
+
 #  Exit On Repeats
 exit_on_repeats=200
 
+
 [timing_plots]
+
 
 num_cities_min_y=-1
 num_cities_max_y=50
