Updating MLE Solver code.

--- a/machine-learning/maximum-likelihood/voting-records/options.cfg
+++ b/machine-learning/maximum-likelihood/voting-records/options.cfg
@@ -1,6 +1,11 @@
 [general]
 
 #  Log Severity
+#
+#  Options:
+#  - INFO
+#  - DEBUG
+#
 log_severity=INFO
 
 
@@ -11,7 +16,12 @@ log_severity=INFO
 train_ratio_start=0.1
 train_ratio_step=0.05
 
+
 #  Masks to skip processing of certain votes.
+#
+#  - Use 1 to process, 0 to skip, 
+#  - In general, do not touch unless you understand the code.
+#
 field_masks=1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1
 
 
@@ -24,4 +34,9 @@ number_repetitions=50
 
 
 #  Min Sigma before we use a dummy value
+#
+#  - This is only because we want to avoid computing
+#    the z-score if sigma is 0 as this will result in 
+#    undefined behavior.
 min_sigma=0.0001
+
