--- a/c++/time-utility/src/bin/CMakeLists.txt
+++ b/c++/time-utility/src/bin/CMakeLists.txt
@@ -15,6 +15,12 @@ set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
 SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )
 
+
+#--------------------------------------------#
+#-     Include the Library Header Files     -#
+#--------------------------------------------#
+include_directories(../lib)
+
 #---------------------------------#
 #-      Set the Main Driver      -#
 #---------------------------------#
@@ -42,5 +48,12 @@ set( TIME_UTILITY_SOURCES
 add_executable(time-utility
                ${TIME_UTILITY_MAIN}
                ${TIME_UTILITY_SOURCES}
+)
+
+#---------------------------------------#
+#-      Link against dependencies      -#
+#---------------------------------------#
+target_link_libraries( time-utility
+                       time_utility
 )
 
