--- a/geographic/geo_notes/Makefile
+++ b/geographic/geo_notes/Makefile
@@ -7,7 +7,7 @@ VIEWER=evince
 BIBTEX_FILE=$(TITLE).bib
 GLOSSARY_FILE=glossary.tex
 
-NOTES= CommonProgramsAndUsage.tex CameraCalibration.tex Orthorectification.tex
+NOTES= CommonProgramsAndUsage.tex CameraCalibration.tex Orthorectification.tex Time_Notes.tex
 
 INCLUDES=$(BIBTEX_FILE) $(GLOSSARY_FILE) $(NOTES)
 
