Adding cover letter start

--- a/latex/Resume/Makefile
+++ b/latex/Resume/Makefile
@@ -2,6 +2,10 @@ resume.pdf: resume.tex
 	pdflatex resume.tex
 	pdflatex resume.tex
 
+cover-letter.pdf: cover-letter.tex
+	pdflatex $<
+	pdflatex $<
+
 open:
 	open resume.pdf
 
