Updating projection code.

--- a/geographic/Reprojector/data/options.cfg
+++ b/geographic/Reprojector/data/options.cfg
@@ -20,9 +20,37 @@ is_northern=True
 [general]
 
 #  Reference Shapefile
-pathname=data/reference.shp
+pathname=data/24k_lakes/24k_lakes-wgs84.shp
 
 #  Project SRS
 projection=epsg:4326
 
+
+#  Feature Point Min Threshold
+feature_point_min_threshold=20
+
+
+[rendering]
+
+#  Output Projection
+#
+#  Allowed Options
+#
+#  - geographic_direct : Spherical treated like cartesian
+#  - cassini
+#
+#output_projection=geographic_direct
+output_projection=cassini
+
+#  Output Image Path
+output_image_path=output.png
+
+#  Window Size
+window_gsd=0.000001
+
+#  Padding
+min_x_padding=0.001
+max_x_padding=0.001
+min_y_padding=0.001
+max_y_padding=0.001
 
