Adding more baseline code.

--- a/opencv/cpp/utilities/analysis-utility/CMakeLists.txt
+++ b/opencv/cpp/utilities/analysis-utility/CMakeLists.txt
@@ -39,6 +39,8 @@ include_directories(${Boost_INCLUDE_DIRS})
 #----------------------------#
 set( ANALYSIS_TOOL_SOURCES
      analysis-utility.cpp
+     Options.cpp
+     Options.hpp
 )
 
 
