Adding baseline code to support Qt gui.

--- a/opencv/cpp/utilities/pair-matcher/CMakeLists.txt
+++ b/opencv/cpp/utilities/pair-matcher/CMakeLists.txt
@@ -34,6 +34,18 @@ find_package(Boost REQUIRED
             )
 include_directories(${Boost_INCLUDE_DIRS})
 
+
+#---------------------------#
+#-      Configure Qt5      -#
+#---------------------------#
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+find_package(Qt5Widgets REQUIRED)
+include_directories(${Qt5Widgets_INCLUDES})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+add_definitions(${Qt5Widgets_DEFINITIONS})
+
+
 #----------------------------#
 #-    Define the Sources    -#
 #----------------------------#
@@ -41,6 +53,10 @@ set( PAIR_MATCHER_SOURCES
      pair-matcher.cpp
      Options.cpp
      Options.hpp
+     gui/MainWindow.cpp
+     gui/MainWindow.hpp
+     gui/TestImageWidget.cpp
+     gui/TestImageWidget.hpp
 )
 
 
@@ -59,5 +75,6 @@ add_executable( pair-matcher
 #-------------------------------#
 target_link_libraries( pair-matcher
                        ${OpenCV_LIBRARIES}
-                       ${Boost_LIBRARIES})
+                       ${Boost_LIBRARIES}
+                       ${Qt5Widgets_LIBRARIES})
 
