--- a/opencv/data/pair-matcher.cfg
+++ b/opencv/data/pair-matcher.cfg
@@ -10,6 +10,9 @@
 #   Supported options
 #   - image : Supported
 #   - wms   : Coming Soon
-ref_image_type=image
+REF_IMAGE_TYPE=image
 
+
+#  Path to reference image (If type=image)
+REF_IMAGE_PATH=test-data/wms-image.tif
 
