Default CPU-only implementation works.

--- a/c++/opencl/coordinate_converter/CMakeLists.txt
+++ b/c++/opencl/coordinate_converter/CMakeLists.txt
@@ -16,6 +16,11 @@ SET(CMAKE_CXX_STANDARD 11)
 #  Find OpenCL
 find_package( OpenCL REQUIRED )
 
+#  Define the thirdparty libraries
+add_subdirectory(thirdparty)
 
 #  Define the library sources
 add_subdirectory(src)
+
+#  Add Tests
+add_subdirectory(tests)
